fix: subtask scrollbar for too many subtasks at add task form

--- a/style.css
+++ b/style.css
@@ -332,6 +332,10 @@ textarea {
   padding-right: 96px;
 }
 
+.pd-b-24px {
+  padding-bottom: 24px;
+}
+
 .pd-b-64px {
   padding-bottom: 64px;
 }
